[gd_scene load_steps=25 format=2]

[ext_resource path="res://Actors/Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/add_cards.gd" type="Script" id=3]
[ext_resource path="res://Actors/Enemies.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/game_controller.gd" type="Script" id=5]
[ext_resource path="res://White-square.jpg" type="Texture" id=6]
[ext_resource path="res://Sounds/draw_btn_sfx.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/laser.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/movement_sfx.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/snowball_music.wav" type="AudioStream" id=10]
[ext_resource path="res://Graphics/sign.png" type="Texture" id=11]
[ext_resource path="res://Font/Steamed DEMO.otf" type="DynamicFontData" id=12]
[ext_resource path="res://Font/bubblegum/Bubblegum.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Graphics/gift2.png" type="Texture" id=14]
[ext_resource path="res://Graphics/tree.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=10]
resource_name = "tree-anim"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tree:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -6.7, 0.0, -6.7 ]
}

[sub_resource type="DynamicFont" id=5]
size = 20
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "gift-anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 23.2, 3.2, 23.2 ]
}

[sub_resource type="DynamicFont" id=6]
size = 27
use_filter = true
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=9]
resource_name = "sign post"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 19.461 ), Vector2( 0, 0 ) ]
}

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -18.687
autoplay = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 51.576, 49.7234 )
collision_layer = 17
collision_mask = 17
_speed = 20

[node name="bulletSpawner" type="Position2D" parent="Player"]
position = Vector2( 3.39105, 2.35963 )
scale = Vector2( 3.23068, 3.23068 )

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 8 )

[node name="MoveSFX" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 9 )

[node name="Board_Holder" type="Node2D" parent="."]
scale = Vector2( 1.01521, 1.01521 )

[node name="Row_1" type="Node2D" parent="Board_Holder"]
position = Vector2( 0, 0.891 )

[node name="Box" parent="Board_Holder/Row_1" instance=ExtResource( 1 )]
position = Vector2( 50.7239, 48.0542 )
scale = Vector2( 4.943, 4.943 )

[node name="Box2" parent="Board_Holder/Row_1" instance=ExtResource( 1 )]
position = Vector2( 149.724, 48.0542 )

[node name="Box3" parent="Board_Holder/Row_1" instance=ExtResource( 1 )]
position = Vector2( 248.724, 48.0542 )

[node name="Box4" parent="Board_Holder/Row_1" instance=ExtResource( 1 )]
position = Vector2( 347.724, 48.0542 )

[node name="Box5" parent="Board_Holder/Row_1" instance=ExtResource( 1 )]
position = Vector2( 446.724, 48.0542 )

[node name="Box6" parent="Board_Holder/Row_1" instance=ExtResource( 1 )]
position = Vector2( 545.724, 48.0542 )

[node name="Box7" parent="Board_Holder/Row_1" instance=ExtResource( 1 )]
position = Vector2( 644.132, 48.0542 )

[node name="Row_2" type="Node2D" parent="Board_Holder"]
position = Vector2( 0, 99.595 )

[node name="Box" parent="Board_Holder/Row_2" instance=ExtResource( 1 )]
position = Vector2( 50.7239, 48.0542 )

[node name="Box2" parent="Board_Holder/Row_2" instance=ExtResource( 1 )]
position = Vector2( 149.724, 48.0542 )

[node name="Box3" parent="Board_Holder/Row_2" instance=ExtResource( 1 )]
position = Vector2( 248.724, 48.0542 )

[node name="Box4" parent="Board_Holder/Row_2" instance=ExtResource( 1 )]
position = Vector2( 347.724, 48.0542 )

[node name="Box5" parent="Board_Holder/Row_2" instance=ExtResource( 1 )]
position = Vector2( 446.724, 48.0542 )

[node name="Box6" parent="Board_Holder/Row_2" instance=ExtResource( 1 )]
position = Vector2( 545.724, 48.0542 )

[node name="Box7" parent="Board_Holder/Row_2" instance=ExtResource( 1 )]
position = Vector2( 644.132, 48.0542 )

[node name="Row_3" type="Node2D" parent="Board_Holder"]
position = Vector2( 0, 198.074 )

[node name="Box" parent="Board_Holder/Row_3" instance=ExtResource( 1 )]
position = Vector2( 50.7239, 48.0542 )

[node name="Box2" parent="Board_Holder/Row_3" instance=ExtResource( 1 )]
position = Vector2( 149.724, 48.0542 )

[node name="Box3" parent="Board_Holder/Row_3" instance=ExtResource( 1 )]
position = Vector2( 248.724, 48.0542 )

[node name="Box4" parent="Board_Holder/Row_3" instance=ExtResource( 1 )]
position = Vector2( 347.724, 48.0542 )

[node name="Box5" parent="Board_Holder/Row_3" instance=ExtResource( 1 )]
position = Vector2( 446.724, 48.0542 )

[node name="Box6" parent="Board_Holder/Row_3" instance=ExtResource( 1 )]
position = Vector2( 545.724, 48.0542 )

[node name="Box7" parent="Board_Holder/Row_3" instance=ExtResource( 1 )]
position = Vector2( 644.132, 48.0542 )

[node name="Row_4" type="Node2D" parent="Board_Holder"]
position = Vector2( 0, 296.553 )

[node name="Box" parent="Board_Holder/Row_4" instance=ExtResource( 1 )]
position = Vector2( 50.7239, 48.0542 )

[node name="Box2" parent="Board_Holder/Row_4" instance=ExtResource( 1 )]
position = Vector2( 149.724, 48.0542 )

[node name="Box3" parent="Board_Holder/Row_4" instance=ExtResource( 1 )]
position = Vector2( 248.724, 48.0542 )

[node name="Box4" parent="Board_Holder/Row_4" instance=ExtResource( 1 )]
position = Vector2( 347.724, 48.0542 )

[node name="Box5" parent="Board_Holder/Row_4" instance=ExtResource( 1 )]
position = Vector2( 446.724, 48.0542 )

[node name="Box6" parent="Board_Holder/Row_4" instance=ExtResource( 1 )]
position = Vector2( 545.724, 48.0542 )

[node name="Box7" parent="Board_Holder/Row_4" instance=ExtResource( 1 )]
position = Vector2( 644.132, 48.0542 )

[node name="Row_5" type="Node2D" parent="Board_Holder"]
position = Vector2( 0, 394.808 )

[node name="Box" parent="Board_Holder/Row_5" instance=ExtResource( 1 )]
position = Vector2( 50.7239, 48.0542 )

[node name="Box2" parent="Board_Holder/Row_5" instance=ExtResource( 1 )]
position = Vector2( 149.724, 48.0542 )

[node name="Box3" parent="Board_Holder/Row_5" instance=ExtResource( 1 )]
position = Vector2( 248.724, 48.0542 )

[node name="Box4" parent="Board_Holder/Row_5" instance=ExtResource( 1 )]
position = Vector2( 347.724, 48.0542 )

[node name="Box5" parent="Board_Holder/Row_5" instance=ExtResource( 1 )]
position = Vector2( 446.724, 48.0542 )

[node name="Box6" parent="Board_Holder/Row_5" instance=ExtResource( 1 )]
position = Vector2( 545.724, 48.0542 )

[node name="Box7" parent="Board_Holder/Row_5" instance=ExtResource( 1 )]
position = Vector2( 644.132, 48.0542 )

[node name="Row_6" type="Node2D" parent="Board_Holder"]
position = Vector2( 0, 493.287 )

[node name="Box" parent="Board_Holder/Row_6" instance=ExtResource( 1 )]
position = Vector2( 50.7239, 48.0542 )

[node name="Box2" parent="Board_Holder/Row_6" instance=ExtResource( 1 )]
position = Vector2( 149.724, 48.0542 )

[node name="Box3" parent="Board_Holder/Row_6" instance=ExtResource( 1 )]
position = Vector2( 248.724, 48.0542 )

[node name="Box4" parent="Board_Holder/Row_6" instance=ExtResource( 1 )]
position = Vector2( 347.724, 48.0542 )

[node name="Box5" parent="Board_Holder/Row_6" instance=ExtResource( 1 )]
position = Vector2( 446.724, 48.0542 )

[node name="Box6" parent="Board_Holder/Row_6" instance=ExtResource( 1 )]
position = Vector2( 545.724, 48.0542 )

[node name="Box7" parent="Board_Holder/Row_6" instance=ExtResource( 1 )]
position = Vector2( 644.132, 48.0542 )

[node name="Outer_Borders" type="Node2D" parent="Board_Holder"]

[node name="Area2D" type="Area2D" parent="Board_Holder/Outer_Borders"]
position = Vector2( -18.7153, 291.565 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board_Holder/Outer_Borders/Area2D"]
scale = Vector2( 1.93134, 31.876 )
shape = SubResource( 1 )

[node name="Area2D4" type="Area2D" parent="Board_Holder/Outer_Borders"]
position = Vector2( 711.183, 286.64 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board_Holder/Outer_Borders/Area2D4"]
scale = Vector2( 1.93134, 31.876 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="Board_Holder/Outer_Borders"]
position = Vector2( 349.681, -19.7003 )
rotation = 1.5708
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board_Holder/Outer_Borders/Area2D2"]
scale = Vector2( 1.79661, 38.9007 )
shape = SubResource( 1 )

[node name="Area2D3" type="Area2D" parent="Board_Holder/Outer_Borders"]
position = Vector2( 345.741, 607.756 )
rotation = 1.5708
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board_Holder/Outer_Borders/Area2D3"]
scale = Vector2( 1.79661, 38.9007 )
shape = SubResource( 1 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemies" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 49, 348 )

[node name="Enemies2" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 455, 49.0001 )

[node name="Enemies3" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 554, 449 )

[node name="Cards" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="Cards"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( -8.04535, 15.1688 )
color = Color( 0.192157, 0.313726, 0.780392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Node2D" parent="Cards"]
position = Vector2( -1028.76, -103.181 )

[node name="tree" type="Sprite" parent="Cards/Tree"]
position = Vector2( 889.637, 443.615 )
rotation = -0.0526217
scale = Vector2( 1.185, 1.469 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cards/Tree"]
autoplay = "tree-anim"
anims/tree-anim = SubResource( 10 )

[node name="Button" type="Button" parent="Cards"]
margin_left = -210.697
margin_top = 332.217
margin_right = -152.697
margin_bottom = 365.217
rect_scale = Vector2( 1.81276, 1.3877 )
custom_fonts/font = SubResource( 5 )
text = "Draw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards_Holder" type="HBoxContainer" parent="Cards"]
margin_left = -314.855
margin_top = 110.175
margin_right = 1193.15
margin_bottom = 610.175
rect_scale = Vector2( 0.2024, 0.305483 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawSFX" type="AudioStreamPlayer2D" parent="Cards/Cards_Holder"]
position = Vector2( -3503.68, -557.29 )
scale = Vector2( 4.94071, 3.2735 )
stream = ExtResource( 7 )

[node name="Win" type="Area2D" parent="."]
position = Vector2( 654, 550 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win"]
scale = Vector2( 2.43776, 2.53011 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Win"]
visible = false
modulate = Color( 0, 1, 0.156863, 1 )
scale = Vector2( 0.0955272, 0.0955272 )
texture = ExtResource( 6 )

[node name="gift" type="Position2D" parent="Win"]
rotation = 0.0757218

[node name="gift" type="AnimatedSprite" parent="Win/gift"]
rotation = -0.319395
scale = Vector2( 0.582, 0.582 )
frames = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Win/gift"]
autoplay = "gift-anim"
anims/gift-anim = SubResource( 8 )

[node name="Sign" type="Node2D" parent="."]
position = Vector2( 0, 8.16005 )

[node name="sign2" type="Sprite" parent="Sign"]
modulate = Color( 0, 0, 0, 0.403922 )
position = Vector2( 864.997, 506.836 )
scale = Vector2( 0.973, 1.132 )
texture = ExtResource( 11 )

[node name="sign" type="Sprite" parent="Sign"]
position = Vector2( 878.448, 511.456 )
scale = Vector2( 0.973, 1.132 )
texture = ExtResource( 11 )

[node name="MovesCountText" type="Label" parent="Sign"]
modulate = Color( 0.215686, 0.556863, 0.521569, 1 )
anchor_top = -1.01725e-07
anchor_bottom = -1.01725e-07
margin_left = 872.114
margin_top = 432.655
margin_right = 983.114
margin_bottom = 473.655
rect_scale = Vector2( 1.32, 1.36 )
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sign"]
modulate = Color( 0.0352941, 0.0784314, 0.32549, 1 )
margin_left = 766.729
margin_top = 428.006
margin_right = 884.729
margin_bottom = 469.006
rect_scale = Vector2( 1.32, 1.36 )
custom_fonts/font = SubResource( 3 )
text = "Moves left:"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sign"]
autoplay = "sign post"
"anims/sign post" = SubResource( 9 )

[node name="snow pls try this lol im stuck" type="Particles2D" parent="."]
position = Vector2( 244.736, -62.5083 )
lifetime = 0.01

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Cards/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Cards/Button" to="Cards/Cards_Holder" method="_on_Button_button_down"]
[connection signal="change_game_state" from="Cards/Cards_Holder" to="." method="_on_Cards_Holder_change_game_state"]
[connection signal="body_entered" from="Win" to="." method="_on_Win_body_entered"]
